# Apollo-AI-Research-Analyst

./: .env.example  .gitignore  CLAUDE.md  HOW_THIS_WAS_BUILT.md  README.md  demo.html  pyproject.toml  requirements.txt  run_biweekly.py
bot/: telegram_bot.py  telegram_config.py
digests/: 2026-02-15.json  2026-02-15.md  2026-03-01.json  2026-03-01.md  2026-04-01.json  2026-04-01.md
docs/: 2026-02-15.html  2026-03-01.html  2026-04-01.html  demo.html  index.html
pipeline/: digest_builder.py  filters.py  memory_writer.py
src/apollo/bot/: telegram_bot.py  telegram_config.py
src/apollo/config/: authors.py  settings.py
src/apollo/pipeline/: arxiv_fetcher.py  digest_builder.py  filters.py  memory_writer.py  scorer.py
templates/: digest.html.jinja2
zeroclaw/: config.toml
